...
                          },
                          icon: Icon(isFavorite
                              ? Icons.favorite_rounded
                              : Icons.favorite_border_rounded),
                          label: Text(isFavorite
                              ? 'Hapus dari Favorit'
                              : 'Simpan Favorit'),
                        ),
                      );
                    },
                  ),
                ],
              ),
...
